name: hakyll-sass
version: 0.2.0
synopsis: Hakyll SASS compiler over hsass
license: MIT
license-file: LICENSE
author: Braden Walters
maintainer: vc@braden-walters.info
category: Web
build-type: Simple
cabal-version: >= 1.10

description:
  Hakyll compiler which indirectly uses libsass to compile SASS and SCSS to CSS.
  The Ruby SASS compiler is not required.

library
  exposed-modules: Hakyll.Web.Sass
  build-depends:
      base >= 4 && < 5
    , hakyll >= 4.7.0
    , data-default-class >= 0.0.1
    , hsass >= 0.2.0
    , filepath >= 1.3.0
  hs-source-dirs: src
  default-language: Haskell2010
