name: hakyll-sass
version: 0.2.3
synopsis: Hakyll SASS compiler over hsass
license: MIT
license-file: LICENSE
homepage: https://github.com/meoblast001/hakyll-sass
author: Braden Walters
maintainer: vc@braden-walters.info
category: Web
build-type: Simple
cabal-version: >= 1.10
Tested-With: GHC == 7.10.2, GHC == 8.0.1

description:
  Hakyll compiler which indirectly uses libsass to compile SASS and SCSS to CSS.
  The Ruby SASS compiler is not required. For documentation, see the
  <https://github.com/meoblast001/hakyll-sass/blob/master/README.md README>.

library
  exposed-modules: Hakyll.Web.Sass
  build-depends:
      base >= 4.7 && < 5
    , aeson-pretty >= 0.8
    , hakyll >= 4.7.0
    , data-default-class >= 0.0.1
    , hsass >= 0.2.0
    , filepath >= 1.3.0
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall

source-repository head
  type: git
  location: https://github.com/meoblast001/hakyll-sass/
