cabal-version: 2.4
name:          hakyll-sass
version:       0.3
synopsis:      Hakyll SASS compiler over hsass
license:       MIT
license-file:  LICENSE
homepage:      https://github.com/meoblast001/hakyll-sass
author:        Braden Walters
maintainer:    vc@braden-walters.info
category:      Web
build-type:    Simple
tested-with:   GHC ==8.6.5 || ==8.8.1
description:
  Hakyll compiler which indirectly uses libsass to compile SASS and SCSS to CSS.
  The Ruby SASS compiler is not required. For documentation, see the
  <https://github.com/meoblast001/hakyll-sass/blob/master/README.md README>.

library
  exposed-modules:  Hakyll.Web.Sass
  build-depends:
    , aeson-pretty  ^>=0.8
    , base          >=4.7  && <4.14
    , filepath      ^>=1.4
    , hakyll        ^>=4.13
    , hsass         ^>=0.8

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:
    -Wall -Wcompat -Wincomplete-uni-patterns
    -Wincomplete-record-updates -Wnoncanonical-monad-instances
    -Wredundant-constraints -Wtabs

source-repository head
  type:     git
  location: https://github.com/waddlaw/hakyll-sass
